# larkxr_native_android_app

./: README.md  build.gradle  config.gradle  settings.gradle
apk/release/: output-metadata.json
ar_app/: build.gradle
ar_app/src/androidTest/java/com/pxy/larkar_native_android_app/: ExampleInstrumentedTest.java
ar_app/src/main/: AndroidManifest.xml
ar_app/src/main/cpp/: CMakeLists.txt  ar_app_application.cpp  ar_app_application.h  background_renderer.cc  plane_renderer.h  util.cc  util.h
ar_app/src/main/java/com/pxy/larkar_native_android_app/: CameraDrawer.java  JniInterface.java  MainActivity.java  OpenGLUtils.java
ar_app/src/main/res/layout/: activity_main.xml
ar_app/src/main/res/values/: strings.xml  themes.xml
ar_app/src/main/res/values-night/: themes.xml
ar_app/src/test/java/com/pxy/larkar_native_android_app/: ExampleUnitTest.java
ar_huawei_app/: build.gradle
ar_huawei_app/src/androidTest/java/com/pxy/ar_huawei_app/: ExampleInstrumentedTest.java
ar_huawei_app/src/main/: AndroidManifest.xml
ar_huawei_app/src/main/cpp/: Ar_Demo.cpp  Ar_Demo.h  CMakeLists.txt  ar_rect_texture.cpp  ar_rect_texture.h  huawei_arengine_interface.h  jni_interface.cc  jni_interface.h  util.cpp  util.h
ar_huawei_app/src/main/cpp/rendering/: world_background_renderer.cpp  world_background_renderer.h  world_object_renderer.cpp  world_object_renderer.h  world_plane_renderer.cpp  world_plane_renderer.h  world_point_cloud_renderer.cpp  world_point_cloud_renderer.h  world_render_manager.cpp  world_render_manager.h  world_xr_cloud_renderer.cpp  world_xr_cloud_renderer.h
ar_huawei_app/src/main/java/com/pxy/ar_huawei_app/: ConnectAppMarketActivity.java  JniInterface.java  MainActivity.java
ar_huawei_app/src/main/java/com/pxy/ar_huawei_app/rendering/: LabelDisplay.java  ObjectDisplay.java  PointCloudRenderer.java  WorldRenderManager.java  WorldShaderUtil.java  XrRenderManager.java
ar_huawei_app/src/main/java/com/pxy/ar_huawei_app/util/: ArDemoRuntimeException.java  DisplayRotationManager.java  GestureEvent.java  LogUtil.java  MatrixUtil.java  PermissionManager.java  (+4 more)
ar_huawei_app/src/main/res/layout/: activity_main.xml
ar_huawei_app/src/main/res/values/: colors.xml  themes.xml
ar_huawei_app/src/main/res/values-night/: themes.xml
ar_huawei_app/src/test/java/com/pxy/ar_huawei_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lark_xr/: lark-core-kit-3.2.0.0-build-1.aar
lark_xr/CloudXR/: AndroidManifest.xml  R.txt
lark_xr/CloudXR/include/: CloudXRClient.h  CloudXRCommon.h
lark_xr/include/lark_xr/: types.h  xr_video_frame.h
lark_xr/include/larkxr_4c/: xr_client_4c.h
lib_xr_common_ui/src/main/cpp/: application.cpp  application.h  env_context.cpp  rect_texture.cpp  rect_texture.h  utils.h
lib_xr_common_ui/src/main/cpp/ui/: localization.cpp  localization.h  menu_view.cpp  navigation.cpp  navigation.h  view.cpp
lib_xr_common_ui/src/main/cpp/ui/home/: home.cpp  home.h
lib_xr_common_ui/src/main/cpp/ui/loading/: loading.cpp
lib_xr_common_ui/src/main/cpp/ui/setup_server/: setup_server_addr.cpp
xr_app_htc/: build.gradle
xr_app_htc/release/: output-metadata.json
xr_app_htc/src/main/: AndroidManifest.xml
xr_app_htc/src/main/cpp/: main.cpp  wave_application.cpp  wvr_scene_cloud.cpp  wvr_scene_cloud.h
xr_app_htc/src/main/java/com/pxy/cloudlarkxrhtc/: BaseApplication.java  ListActivity.java  MainActivity.java  ServerBean.java  StartActivity.java
xr_app_htc/src/main/res/layout/: activity_list.xml  setting_ip_item.xml  setting_list_item.xml  spinner_item.xml
xr_app_htc/src/main/res/values/: strings.xml
xr_app_huawei/: build.gradle
xr_app_huawei/src/main/: AndroidManifest.xml
xr_app_huawei/src/main/cpp/: CmakeLists.txt  egl_environment.cpp  egl_environment.h  gl_function_ext.cpp  gl_function_ext.h  logger.h  main.cpp  main.h  matrix_functions.h  model.cpp  model.h  shader.h  texture.cpp  texture.h  xr_demo.cpp  xr_demo.h
xr_app_huawei/src/main/cpp/openxr/: openxr.h
xr_app_huawei/src/main/java/com/pxy/xr_app_huawei/: BitmapDecoder.java  MainActivity.java
xr_app_huawei/src/main/res/values/: strings.xml
xr_app_nolo/: build.gradle
xr_app_nolo/src/main/cpp/: larkxr_client.cpp  larkxr_client.h  scene_base.h
xr_app_oculus/: build.gradle
xr_app_oculus/src/main/: AndroidManifest.xml
xr_app_oculus/src/main/cpp/: main.cpp  ovr_application.cpp  ovr_application.h  ovr_scene_cloud.cpp  ovr_scene_cloud.h  ovr_scene_local.cpp  ovr_scene_local.h
xr_app_oculus/src/main/java/com/pxy/cloudlarkxroculus/: BaseApplication.java  ListActivity.java  MainActivity.java  StartActivity.java
xr_app_oculus/src/main/res/drawable/: blue_shape.xml  blue_shape_with_back.xml
xr_app_oculus/src/main/res/layout/: activity_list.xml  applist_item.xml  setting_ip_item.xml  setting_list_item.xml
xr_app_oculus/src/main/res/values/: strings.xml
xr_app_openxr_pico/: build.gradle
xr_app_pico/: build.gradle
xr_app_pico/src/main/: AndroidManifest.xml
xr_app_pico/src/main/cpp/: native-lib.cpp  pvr_application.cpp  pvr_application.h  pvr_scene_cloud.cpp  pvr_scene_cloud.h  pvr_scene_local.cpp
xr_app_pico/src/main/java/com/pxy/cloudlarkxrpico/: AppListAdapter.java  BaseApplication.java  ListActivity.java  MainActivity.java  ServerBean.java  StartActivity.java  UniqueIDUtils.java
xr_app_pico/src/main/res/drawable-v24/: blue_shape_with_back.xml
xr_app_pico/src/main/res/layout/: activity_list.xml  activity_start.xml  applist_item.xml  setting_ip_item.xml  setting_list_item.xml
xr_app_pico/src/main/res/values/: strings.xml  styles.xml
xr_app_pico_neo2/: build.gradle
xr_app_pico_neo2/src/main/: AndroidManifest.xml
xr_app_pico_neo2/src/main/cpp/: pvr_application.cpp  pvr_scene_cloud.cpp  pvr_scene_local.cpp  pvr_scene_local.h
xr_app_pico_neo2/src/main/java/com/pxy/cloudlarkxrpico/: MainActivity.java
xr_app_pico_neo2/src/main/res/layout/: setting_list_item.xml  spinner_item.xml
xr_app_pico_neo2/src/main/res/values/: strings.xml
xr_app_xms/: build.gradle
xr_app_xvisio/: build.gradle
xr_app_xvisio/src/main/cpp/: larkxr_client.cpp
(+33 files in other folders)
